<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="grupo_rebechi_garcialozano.dam.isi.frsf.lab01.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="28dp" />

        <EditText
            android:id="@+id/edittext_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="68dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuit"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="121dp" />

        <EditText
            android:id="@+id/edittext_cuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:inputType="number"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="148dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importe"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="204dp" />

        <EditText
            android:id="@+id/edittext_importe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:inputType="number"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="233dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_dias"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="283dp" />

        <SeekBar
            android:id="@+id/seekbar_cant_dias"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_weight="0.05"
            android:max="365"
            android:min="1"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="312dp" />

        <TextView
            android:id="@+id/textview_cant_dias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1 dias"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="344dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rendimiento"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="361dp" />

        <TextView
            android:id="@+id/textview_rendimiento"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="$ 0.00"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="387dp" />

        <CheckBox
            android:id="@+id/chbox_renovar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renovar"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="443dp" />

        <Button
            android:id="@+id/btn_hacer_plazo_fijo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_hacer_plazo_fijo"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="468dp" />

        <TextView
            android:id="@+id/textview_rendimiento_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_rendimiento_invalido"
            android:textSize="18sp"
            android:visibility="invisible" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
